--- a/skills/solidworks.html
+++ b/skills/solidworks.html
@@ -31,33 +31,37 @@
       <div class="content">
 	      <h1>Solidworks</h1>
         <hr><br>
-        <h3> Solidworks is another extension of my drawing abilities and makes use of a strong visual understanding of 3d space. Drawing in solidworks is almost like playing a video game. </h3>
-<h3><ul>
-  <li>Precicely follow drafting design principles</li>
-<li>Create mechanical components, schematics, angle and orthographic views</li>
-<li>Produce detailed designs, and drawings using technical product specifications</li>
-<li>Build detailed renderings, illustrations, and motion simulations</li>
-<li>Construct drawings and designs from hand sketches</li>
+        <h3> Solidworks is another extension of my drawing abilities and makes use of a strong visual understanding of three dimensional space. Drawing in solidworks is almost like playing a video game. Even though i have advanced part modeling, and advanced assembly modeling skills, one area i can improve is the use of analytical tools. </h3>
+<h3>
+  <h3>Some skills used to create these projects:
+  <ul>
+  <li>Precicely follow drafting and design principles and standards</li>
+<li>Build mechanical components, schematics, angle and orthographic drawings</li>
+  <li>Communicate clearly and complete designs via correspondance</li>
+<li>Produce detail drawings using technical product specifications for manufacturing</li>
+<li>Create detailed visual renderings, illustrations, and motion simulations</li>
   </ul>
-  <h2>FUEL TANK</h2>
-<h3> As part of the UVic formula SAE team, I designed the race car’s fuel tank. This fuel tank was used on the formula SAE race car for the 2015 season event in Michigan.</h3>
-  <a href="../images/fueltank.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/fueltank.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
+  <h2>SAE FUEL TANK</h2>
+<h3> As part of the UVic formula SAE team, via correspondance, I designed, the race car’s fuel tank. This fuel tank was used on the formula SAE race car for the 2015 season event in Michigan.</h3>
+  <a href="www.joel-butler.com/images/fueltank.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/fueltank.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
   <br>
-<h3>Technical specifications and documents were used to create the fuel tank focusing on space, size, material, manufacturing and existing physical constraints. Based on these design restrictions, detailed sheet metal drawings were produced for manufacturing.<h3>
+<h3>Technical specifications and documents were used to create the fuel tank focusing on space, size, material, manufacturing and existing physical constraints. Based on these design restrictions, detailed sheet metal drawings were produced specifically designed for ease of manufacturing.<h3>
 
-  <h2>MOTORS</h2>
-<h3>Both calipers, and detail drawings, were used as references for components as modeling exercise. Motion simulation, rendering and meshing of gears were practiced in both of these projects.</h3>
+  <h2>DOUBLE GEAR MOTOR</h2>
+ <h3>The double gear motor assembly uses two small electric motors to drive independant axles. It's was used as the drive system for small robots and the independant axles allow the robot to change directions.</h3>
    <a href="../images/doublegear.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/doublegear.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
-  <br>
+  <h3>All components were measured from a physical model using a digital caliper. The assembly contains quite a few unique components.</h3>
    <a href="../images/doublegearexploded.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/doublegearexploded.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
   <br>
 <h3>The double gear motor uses small electric motors and gears to drive two independent axles. They are used for powering small “sumo” robots.</h3>
+  <h2>STERLING ENGINES</h3>
+  <h3>Sterling engines are insanely cool. They use heat as a fuel source. Specifically, the displacement of air caused by a temperature difference. Warmed air is displaced by cool air. The heated air cools, and the process repeats. This continual heating, displacing, cooling, and heating moved a piston and turns a wheel. If manufactured correctly, these engines will actually run off of the heat of your hand!</h3>
    <a href="../images/miser.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/miser.JPG" alt="Solidworks Miser Sterling Engine" width="80%" height="auto"></a><br>
-<h3>The miser sterling engine is a heat displacement engine that runs off of a temperature difference. Air heats and flows moving a piston and wheel. If manufactured correctly, this engine will actually run off of the heat of your hand!</h3>
+<h3>The Sterling engine below is designed to be powered by a small tea candle or flame. Anything that can be used to create a temperature difference can be used to power these engines including ice.</h3>
   <br>
    <a href="../images/horizontalsterling.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/horizontalsterling.JPG" alt="Solidworks Double Gear Motor" width="70%" height="auto"></a>
   <br>
-<h3>From these detailed models, assembly drawings and detail drawings can easily be produced for manufacturing.</h3>
+<h3>From these 3D models, assembly drawings and detail drawings can easily be produced for part manufacturing and assembly.</h3>
 <br><hr><br>
       <h3><center>Resume available upon request</h3>
         <br><br>
