--- a/skills/autocad.html
+++ b/skills/autocad.html
@@ -31,14 +31,23 @@
       <div class="content">
 	      <h1>AutoCAD</h1>
         <hr><br>
-        <h3>AutoCAD is very similar to Solidworks. My drawing skills are easily transferrable between the two programs. However, I use AutoCAD primarily if a 3D model is not required. I also find AutoCAD easier for managing and creating drawings in 2D space. 
-
--Create designs that meet and cost and material requirements for ease of manufacture
--Develop detailed engineering blueprints and drawings using AutoCAD and Autodesk 
--Verify the safety of selected designs through the use of engineering calculations
--Conduct in field inspections to determine physical dimensions and design constraints
--Create engineering drawings approved by professional structural engineers.
- As part of a project’s installation design, a snatch block was chosen to raise a device weighing up to 16 tons. The existing 20 ton snatch block makes use of a shackle to connect to other objects. For this project, a new lifting apparatus was required in place of the shackle. A simple design made of readily available and easy to manufacture material was required. The design links the 16 ton body to the snatch block by means of two pins and two plates. Based on the required size of the shackle pin, it is clear that this is the weakest point in the design. Therefore, engineering calculations of shear stress, bearing stress, and normal stress, were carried out at this location to determine if the design will meet the required factor of safety.After confirming engineering calculations, the design was sent to a professional structural engineer for final approval.</h3>
+        <h3>AutoCAD is very similar to Solidworks. My drawing skills are easily transferrable between the two programs. However, I use AutoCAD primarily if a 3D model is not required. I also find AutoCAD easier for managing and creating drawings in 2D space.</h3>
+        <h3>Some AutoCAD skills:</h3>
+  <h3><ul>
+<li>Create designs that meet and cost and material requirements for ease of manufacture</li>
+<li>Develop detailed engineering drawings using AutoCAD and Autodesk </li>
+<li>Verify the safety of selected designs through engineering calculations</li>
+<li>Conduct in field inspections to determine physical dimensions and design constraints</li>
+  <li>Create engineering drawings approved by professional structural engineers.</li>
+    </ul></h3>
+        <h2>LIFTING ASSEMBLY</h2>
+<h3>As part of the project’s installation design and process, a snatch block was chosen to raise an object weighing up to 16 tons. The selected 20 ton snatch block makes use of a shackle to connect itself to other objects. For this project, a new lifting apparatus was required in place of the shackle.</h3>
+  <a href="www.joel-butler.com/images/lifting.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/lifting.jpg" alt="AutoCAD detail drawing" width="80%" height="auto"></a>
+  <h3>
+  A simple design made of readily available and easy to manufacture material was required. The chosen design links the 16 ton body to the snatch block by means of two pins and two plates. Based on the required size of the shackle pin, it is clear that the smaller pin connection is the weakest point in the design. Therefore, engineering calculations of shear stress, bearing stress, and normal stress, were carried out at this location to determine if the design will meet the required factor of safety.</h3>
+    <a href="www.joel-butler.com/images/engineeringcalculations.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/engineeringcalculations.jpg" alt="AutoCAD Engineering Calculations" width="80%" height="auto"></a>
+  <h3>
+  Engineering calculations of shear stress, normal stress, and bearing stress were carried out on the diagrams above. After confirming the lifting device met the safety requirements for the project, the design was sent to a professional structural engineer for final approval and stamping.</h3>
 <br><hr><br>
       <h3><center>Resume available upon request</h3>
         <br><br>
