--- a/skills/htmlcss.html
+++ b/skills/htmlcss.html
@@ -31,25 +31,27 @@
       <div class="content">
 	      <h1>HTML/CSS</h1>
         <hr><br>
-        <h3> HTML, CSS and JavaScript are all a large work in progress for me, however I have been thoroughly enjoying learning another new skill. Especially one I believe will be invaluable to me in the future. 
-
-This website is really the only experience with HTML I have. I started from the ground up basically starting with a simple background image with some overlaid text. From there, I added a fixed top navigation bar which is responsive based on what page is selected. 
-
-A website footer was finished next. Lucky, I do have some experience in C++, C, and Arduino programming which has really helped me understand existing code and create new HTML code quickly. I bought an HTML book and used many online resources to find ideas and learn.
-
-From here, I began building individual pages from the visions I had on paper. I knew I wanted my name to stand out on my home page, but regular text wasn’t going to cut it. I used free graphic design software called InkScape to create a vector image. This allowed me to create a white background with see through letters. I previously gained experience with InkScape when I was creating G-Code for my Arduino CNC project. 
-
-I also learned how to use images to link to various pages such as Instagram, and email. Furthermore, these links can also direct a user to child pages on my website.
-
-For my “skills” page, I learned how to create tables and size images to suit. The major challenge with this was formatting the page for various window sizes. It was challenging to create responsive images that resize themselves based on the size of the device used.
-
-By this point I didn’t really even have any “content” on my website and I was really thinking that creating my own website on WordPress would be much less of a pain. However, solving problems absorbs me and I really enjoy when the lightbulb clicks and something I have been struggling with suddenly works. Success! Sure enough, solving small problem after small problem creates something complex and attractive. 
-
-I learned how to create a form for collecting visitor information. The problem with this is, that for the form to work correctly, it needs to have some PHP code which will send an email directly from the form. I don’t know the first thing about PHP! 
-
-Finally, before I’m satisfied, I also would like to have a simple format for organizing and creating new project pages. This way, each time I make a new post, I can sort that quickly into my website without writing a ton of code. 
-
-Out of all of the personal projects I have undertaken, I would argue that this has website been the most rewarding so far. 
+        <h2>PERSONAL WEBSITE</h2>
+<h3>This is my first attempt at HTML and CSS. Prior to this website, i had zero experience! HTML, CSS and JavaScript are all a large work in progress for me; however I have been thoroughly enjoying learning another new skill. Especially one I believe will be invaluable to me in the future.</h3>
+        <h3>Some skills i learned while building this website:</h3>
+        <h3><ul>
+          <li>Plan and build CSS webpage layouts</li>
+          <li>Style pages and text using CSS and HTML</li>
+          <li>Understand box models padding and positioning</li>
+          <li>Create and style forms for gathering user information</li>
+          <li>Position images and website links</li>
+          </ul>
+       
+<h3>Luckily, I had some basic knowledge of C, C++ and Arduino programming prior to starting this project. These skills helped me understand the code i was reading in books, and in online tutorials.</h3>
+        
+<h3>I started from the ground up with a simple background image and some overlaid text. From there, I added a fixed top navigation bar which is responsive based on what page is selected. A website footer was finished next. From here, I began building individual pages from the visions I had on paper. I knew I wanted my name to stand out on my home page, but regular text wasn’t going to cut it.</h3>
+<h3>I used free graphic design software called InkScape to create a vector image. This allowed me to make a white background with see through text for my home page. I previously gained experience with InkScape when I was creating G-Code for my Arduino CNC project.</h3> 
+<h3>I also learned how to use images to link to various pages such as Instagram, and email. Furthermore, these links can also direct a user to child pages on my website.</h3>
+<h3>For my “skills” page, I learned how to create tables and size images to suit. The major challenge with this was formatting the page for various window sizes. It was challenging to create responsive images that resize themselves based on the size of the device used.</h3>
+<h3>By this point I didn’t really even have any “content” on my website and I was really thinking that creating my own website on WordPress would be much less of a pain. However, solving problems absorbs me and I really enjoy when the lightbulb clicks and something I have been struggling with suddenly works. Success! Sure enough, solving small problem after small problem creates something complex and attractive. </h3>
+<h3>I learned how to create a form for collecting visitor information. The problem with this is, that for the form to work correctly, it needs to have some PHP code which will send an email directly from the form. I don’t know the first thing about PHP! </h3>
+<h3>Something I learned quickly is that planning is possibly the most important part of building a website. With a solid plan, building a vision is infinitely easier.</h3>
+<h3>Out of all of the personal projects I have undertaken, I would argue that this has website been the most rewarding so far. 
 </h3>
         <br><br>
        </div>
