--- a/skills/index.html
+++ b/skills/index.html
@@ -57,7 +57,34 @@
       <a href="woodwork">WOODWORK
       </a></div>
 </div><br>
-<hr><br>
+  <hr><h1>FIELD EXPERIENCE</h1><hr>
+  <h2>ESSO</h2>
+<h3><ul>
+<li>Contracted to work directly with Imperial Oil to create and handle a complete list of project deficiencies</li>
+<li>Managed hydrostatic testing, deficiency, and all other quality control documentation for client turnover</li>
+<li>Formed an intimate relationship with all project deficiencies for client tracking and progressing</li>
+<li>Solved countless field installation issues by tracking and researching identified deficiencies</li>
+  </ul></h3>
+
+  <h2>SWISS WATER COFFEE</h2><h3><ul>
+  <li>Reviewed project specifications and drawings to identify installation progress</li>
+<li>Developed a project specific tracking sheet for logging installation progress for client reporting</li>
+<li>Created and handled requests for new information after identifying gaps in provided documentation</li>
+<li>Produced hydrostatic testing quality control documentation for installed piping systems</li>
+  <li>Handled and distributed all received client transmittals and drawings</li></ul></h3>
+
+  <h2>BC HYDRO</h2><h3><ul>
+<li>Developed a risk management plan for the Strathcona Dam improvement project</li>
+<li>Engineered and produced professional detail drawings for a lifting device</li>
+<li>Prepared an environmental protection plan and traffic control plan for the project</li>
+<li>Assisted in the design of various installation systems </li>
+  </ul></h3>
+  <h2>PACIFIC COAST TERMINALS</h2><h3><ul>
+<li>Documented, managed, and tracked all hourly employee time</li>
+<li>Logged and monitored all material purchasing and on site receiving</li>
+<li>Received, handled, and distributed all incoming project documents</li>
+<li>Reviewed physical structural installation progress</li>
+  </h3><ul><hr>
       <h3><center>Resume available upon request</h3>
         <br><br>
        </div>
