--- a/skills/index.html
+++ b/skills/index.html
@@ -57,7 +57,7 @@
       <a href="woodwork">WOODWORK
       </a></div>
 </div><br>
-  <hr><h1>FIELD EXPERIENCE</h1><hr>
+  <hr><h1>Field Experience</h1><hr>
   <h2>ESSO</h2>
 <h3><ul>
 <li>Contracted to work directly with Imperial Oil to create and handle a complete list of project deficiencies</li>
