--- a/skills/solidworks.html
+++ b/skills/solidworks.html
@@ -43,7 +43,7 @@
   </ul>
   <h2>SAE FUEL TANK</h2>
 <h3> As part of the UVic formula SAE team, via correspondance, I designed, the race car’s fuel tank. This fuel tank was used on the formula SAE race car for the 2015 season event in Michigan.</h3>
-  <a href="www.joel-butler.com/images/fueltank.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/fueltank.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
+  <a href="../images/fueltank.JPG"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/fueltank.JPG" alt="Solidworks Double Gear Motor" width="80%" height="auto"></a>
   <br>
 <h3>Technical specifications and documents were used to create the fuel tank focusing on space, size, material, manufacturing and existing physical constraints. Based on these design restrictions, detailed sheet metal drawings were produced specifically designed for ease of manufacturing.<h3>
 
