--- a/skills/index.html
+++ b/skills/index.html
@@ -30,33 +30,23 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Skills</h1>
-        <hr><br>
-        
-<div class="tablecontainer">
-<div class="solidworkscell">
-        <a href="solidworks">SOLIDWORKS</div>
-    <div class="gutter"></div>
+  <hr><br>
+          <div class="solidworkscell">
+        <a href="solidworks">SOLIDWORKS</div><br>
     <div class="autocadcell">
-        <a href="autocad">AUTOCAD</div>
-      <div class="gutter"></div>
+        <a href="autocad">AUTOCAD</div><br>
     <div class="htmlcsscell">
       <a href="htmlcss">HTML/CSS
-    </div>
-</div>
-      <BR>
-      <div class="tablecontainer">
+    </div><br>
 <div class="arduinocell">
         <a href="arduino">ARDUINO
-  </div>
-    <div class="gutter"></div>
+  </div><br>
     <div class="drawingcell">
         <a href="drawing">DRAWING
-    </div>
-      <div class="gutter"></div>
+    </div><br>
     <div class="woodworkcell">
       <a href="woodwork">WOODWORK
-      </a></div>
-</div><br>
+      </a></div><br>
   <hr><h1>Field Experience</h1><hr>
   <h2>ESSO</h2>
 <h3><ul>
