--- a/skills/index.html
+++ b/skills/index.html
@@ -30,25 +30,27 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Skills</h1>
-  <hr><br>
+  <hr>
           <div class="solidworkscell">
-        <a href="solidworks">SOLIDWORKS</div><br>
+            <a href="solidworks"><h2><center>SOLIDWORKS</h2></div>
     <div class="autocadcell">
-        <a href="autocad">AUTOCAD</div><br>
+      <a href="autocad"><h2><center>AUTOCAD</h2></div>
     <div class="htmlcsscell">
-      <a href="htmlcss">HTML/CSS
-    </div><br>
+      <a href="htmlcss"><h2><center>HTML/CSS
+    <h2></div>
 <div class="arduinocell">
-        <a href="arduino">ARDUINO
-  </div><br>
+        <a href="arduino"><h2><center>ARDUINO
+          </h2></div>
     <div class="drawingcell">
-        <a href="drawing">DRAWING
-    </div><br>
+        <a href="drawing"><h2><center>DRAWING
+          </h2></div>
     <div class="woodworkcell">
-      <a href="woodwork">WOODWORK
+      <a href="woodwork"><h2><center>WOODWORK</h2>
       </a></div><br>
   <hr><h1>Field Experience</h1><hr>
-  <h2>ESSO</h2>
+<div class="essocell">
+  <h2><center>ESSO</h2>
+      </div>
 <h3><ul>
 <li>Contracted to work directly with Imperial Oil to create and handle a complete list of project deficiencies</li>
 <li>Managed hydrostatic testing, deficiency, and all other quality control documentation for client turnover</li>
@@ -56,25 +58,31 @@
 <li>Solved countless field installation issues by tracking and researching identified deficiencies</li>
   </ul></h3>
 
-  <h2>SWISS WATER COFFEE</h2><h3><ul>
+  <div class="swisswatercell">
+    <h2><center>SWISS WATER COFFEE</h2>
+      </div><h3><ul>
   <li>Reviewed project specifications and drawings to identify installation progress</li>
 <li>Developed a project specific tracking sheet for logging installation progress for client reporting</li>
 <li>Created and handled requests for new information after identifying gaps in provided documentation</li>
 <li>Produced hydrostatic testing quality control documentation for installed piping systems</li>
   <li>Handled and distributed all received client transmittals and drawings</li></ul></h3>
 
-  <h2>BC HYDRO</h2><h3><ul>
+  <div class="bchydrocell">
+  <h2><center>BC HYDRO</h2>
+      </div><h3><ul>
 <li>Developed a risk management plan for the Strathcona Dam improvement project</li>
 <li>Engineered and produced professional detail drawings for a lifting device</li>
 <li>Prepared an environmental protection plan and traffic control plan for the project</li>
 <li>Assisted in the design of various installation systems </li>
   </ul></h3>
-  <h2>PACIFIC COAST TERMINALS</h2><h3><ul>
+  <div class="pctcell">
+  <h2><center>PACIFIC COAST TERMINALS</h2>
+    </div><h3><ul>
 <li>Documented, managed, and tracked all hourly employee time</li>
 <li>Logged and monitored all material purchasing and on site receiving</li>
 <li>Received, handled, and distributed all incoming project documents</li>
 <li>Reviewed physical structural installation progress</li>
-  </h3><ul><hr>
+  </h3></ul><hr>
       <h3><center>Resume available upon request</h3>
         <br><br>
        </div>
@@ -103,6 +111,7 @@
 <script>
 function collapseFunction() {
     document.getElementsByClassName("navigation")[0].classList.toggle("responsive");
+  .onclick
 }
 </script>
     
