--- a/skills/index.html
+++ b/skills/index.html
@@ -49,7 +49,7 @@
       </a></div><br>
   <hr><h1>Field Experience</h1><hr>
 <div class="essocell">
-  <h2><center>ESSO</h2>
+  <h2><center>ESSO IOCO</h2>
       </div>
 <h3><ul>
 <li>Contracted to work directly with Imperial Oil to create and handle a complete list of project deficiencies</li>
@@ -68,7 +68,7 @@
   <li>Handled and distributed all received client transmittals and drawings</li></ul></h3>
 
   <div class="bchydrocell">
-  <h2><center>BC HYDRO</h2>
+  <h2><center>BC HYDRO STRATHCONA</h2>
       </div><h3><ul>
 <li>Developed a risk management plan for the Strathcona Dam improvement project</li>
 <li>Engineered and produced professional detail drawings for a lifting device</li>
