--- a/skills/index.html
+++ b/skills/index.html
@@ -49,7 +49,7 @@
       </a></div><br>
   <hr><h1>Field Experience</h1><hr>
 <div class="essocell">
-  <h2><center>IMPERIAL OIL</h2>
+  <h2><center>ESSO</h2>
       </div>
 <h3><ul>
 <li>Contracted to work directly with Imperial Oil to create and handle a complete list of project deficiencies</li>
