--- a/skills/htmlcss.html
+++ b/skills/htmlcss.html
@@ -53,6 +53,8 @@
 <h3>Something I learned quickly is that planning is possibly the most important part of building a website. With a solid plan, building a vision is infinitely easier.</h3>
 <h3>Out of all of the personal projects I have undertaken, I would argue that this has website been the most rewarding so far. 
 </h3>
+       <br><hr><br>
+      <h3><center>Resume available upon request</h3>
         <br><br>
        </div>
     </div>
