--- a/projects/index.html
+++ b/projects/index.html
@@ -15,11 +15,11 @@
   <header>
    <nav class="navigation">
       <ul>
-        <li class="contact"><a href="contact">Contact</a></li>
-        <li class="about"><a href="about">About</a></li>
-        <li class="projects"><a class="active" href="projects">Projects</a></li>
-        <li class="skills"><a  href="skills">Skills</a></li>
-        <li class="home"><a href="/">Home</a></li> 
+        <li class="contact"><a href="../contact">Contact</a></li>
+        <li class="about"><a href="../about">About</a></li>
+        <li class="projects"><a class="../active" href="projects">Projects</a></li>
+        <li class="skills"><a  href="../skills">Skills</a></li>
+        <li class="home"><a href="../">Home</a></li> 
         <li class="icon"><a href="javascript:void(0);" onclick="collapseFunction()">
             <i class="fa fa-server fa-lg"></i></a><li>
       </ul>
@@ -50,7 +50,9 @@
            	<h3>Well, for two hours of fun (or pain depending on how you look at it) all you need is an American dollar, two hands, and a little bit of patience. 
 		There two distinct moments where I was close to ripping the dollar into a million pieces. Once during steps 15 through 30 which involved
 		45 minutes or so of pre-folding. And once again during step 38 because how am I supposed to understand what’s happening there?! </h3>
-       </div>
+       </div><hr>
+      <h3><center>Resume available upon request</h3>
+        <br><br>
     </div>
   </section>
        
