--- a/projects/index.html
+++ b/projects/index.html
@@ -29,16 +29,17 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-      <h1> Projects</h1>
-        <nav class="projectsbar">
-        <ul>
-          <hr>
-        <li class="adventure"><a href="projects/adventure">Adventure</a></li>
-        <li class="art"><a href="projects/art">Art</a></li>
-        <li class="cooking"><a href="projects/cooking">Cooking</a></li>
-        <li class="technical"><a  href="projects/technical">Technical</a></li>
-        <hr></ul>
-        </nav>
+      h1>Skills</h1>
+  	<hr>
+          <div class="adventurecell">
+            <a href="adventure"><h3><center>ADVENTURE</h3></div>
+    	<div class="artcell">
+      	    <a href="art"><h3><center>ART</h3></div>
+    	<div class="cookingcell">
+      	    <a href="cooking"><h3><center>COOKING</h3></div>
+	<div class="technicalcell">
+           <a href="technical"><h3><center>TECHNICAL</h3></div>
+           <br><hr>
         <h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
