--- a/projects/index.html
+++ b/projects/index.html
@@ -29,7 +29,7 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-      h1>Skills</h1>
+     <h1>Skills</h1>
   	<hr>
           <div class="adventurecell">
             <a href="adventure"><h3><center>ADVENTURE</h3></div>
