--- a/projects/index.html
+++ b/projects/index.html
@@ -32,13 +32,13 @@
      <h1>Projects</h1>
   	<hr>
           <div class="adventurecell">
-            <a href="adventure"><h3><center>ADVENTURE</h3></div>
+            <a href="adventure"><h3><center>ADVENTURE</h3></a></div>
     	<div class="artcell">
-      	    <a href="art"><h3><center>ART</h3></div>
+      	    <a href="art"><h3><center>ART</h3></a></div>
     	<div class="cookingcell">
-      	    <a href="cooking"><h3><center>COOKING</h3></div>
+      	    <a href="cooking"><h3><center>COOKING</h3></a></div>
 	<div class="technicalcell">
-           <a href="technical"><h3><center>TECHNICAL</h3></div>
+           <a href="technical"><h3><center>TECHNICAL</h3></a></div>
            <br><hr>
         <h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
