--- a/skills/drawing.html
+++ b/skills/drawing.html
@@ -31,7 +31,14 @@
       <div class="content">
 	      <h1>Drawing</h1>
         <hr><br>
-        <h3>I don’t spend too much time drawing, but it’s a cool skill none the less. My sister is a professional tattoo artist and growing up alongside her, I was exposed to a ton of drawings, painting, and art in general.</h3><a href="../images/chameleon.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/chameleon.jpg" alt="AutoCAD detail drawing" width="80%" height="auto"></a> <h3>I believe I learned from watching her? Make sure you check out her website <a href="http://darcilove.com">www.darcilove.com</a>. I don't actually really know much of anything about drawing technique. Either way, this skill really helps me when drawing in AutoCAD, Solidworks, hand sketching ideas, and Pictionary.</h3>
+        <h3>I don’t spend too much time drawing, but it’s a cool skill none the less. My sister is a professional tattoo artist and 
+        growing up alongside her, I was exposed to a ton of drawings, painting, and art in 
+        general.</h3><a href="../images/chameleon.jpg"><img style="margin: 20px 20px 20px 20px;" src="http://www.joel-butler.com/images/chameleon.jpg" alt="AutoCAD detail drawing" width="80%" height="auto"></a> <h3>I 
+        believe I learned from watching her? Make sure you check out her website <a href="http://darcilove.com">www.darcilove.com</a>. 
+        I don't actually really know much of anything about drawing technique. Either way, this skill 
+        really helps me when drawing in AutoCAD, Solidworks, hand sketching ideas, and Pictionary.</h3>
+<br><hr><br>
+      <h3><center>Resume available upon request</h3>
         <br><br>
        </div>
     </div>
