--- a/projects/index.html
+++ b/projects/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Personal Projects</title>
+  <title>Joel Butler - Skills Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <meta name="description" content="Projects">
+  <meta name="description" content="Personal Website">
   <meta name="author" content="Joel Butler">
 
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
-<body class="projects">    
+<body class="projects">
   <header>
    <nav class="navigation">
       <ul>
         <li class="contact"><a href="../contact">Contact</a></li>
         <li class="about"><a href="../about">About</a></li>
-        <li class="projects"><a class="../active" href="projects">Projects</a></li>
-        <li class="skills"><a  href="../skills">Skills</a></li>
+        <li class="projects"><a class="active" href="/">Projects</a></li>
+        <li class="skills"><a href="../skills">Skills</a></li>
         <li class="home"><a href="../">Home</a></li> 
         <li class="icon"><a href="javascript:void(0);" onclick="collapseFunction()">
             <i class="fa fa-server fa-lg"></i></a><li>
@@ -29,17 +29,6 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-     <h1>Projects</h1>
-  	<hr>
-          <div class="adventurecell">
-            <a href="adventure"><h3><center>ADVENTURE</h3></a></div>
-    	<div class="artcell">
-      	    <a href="art"><h3><center>ART</h3></a></div>
-    	<div class="cookingcell">
-      	    <a href="cooking"><h3><center>COOKING</h3></a></div>
-	<div class="technicalcell">
-           <a href="technical"><h3><center>TECHNICAL</h3></a></div>
-           <br><hr>
         <h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
@@ -54,7 +43,7 @@
        <hr>
       <h3><center>Resume available upon request</h3>
         <br><br>
-        </div>
+       </div>
     </div>
   </section>
        
@@ -85,3 +74,4 @@ function collapseFunction() {
     
 </body>
 </html>
+
