--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joel Butler - Skills Page</title>
+  <title>Joel Butler - Projects Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta name="description" content="Personal Website">
   <meta name="author" content="Joel Butler">
@@ -29,7 +29,19 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>Origami Koi</h1>
+	      <h1>Projects</h1>
+  <hr>
+          <div class="adventurecell">
+            <a href="adventure"><h3><center>Adventure</h3></div>
+    <div class="cookingcell">
+      <a href="cooking"><h3><center>Cooking</h3></div>
+    <div class="artcell">
+      <a href="art"><h3><center>Art
+    <h3></div>
+<div class="technicalcell">
+        <a href="technical"><h3><center>Technical
+          </h3></div>
+<br><hr><br><h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
 		I stumbled upon an origami book by Won Park which contained an incredibly realistic dollar bill Koi fish. </h3>
@@ -39,7 +51,7 @@
             	<a href="../files/dollarkoifish.pdf"><img style="float: left; margin: 0px 25px 0px 0px;" src="../images/koiinstructions.JPG" width="160" height="160"></a>
            	<h3>Well, for two hours of fun (or pain depending on how you look at it) all you need is an American dollar, two hands, and a little bit of patience. 
 		There two distinct moments where I was close to ripping the dollar into a million pieces. Once during steps 15 through 30 which involved
-		45 minutes or so of pre-folding. And once again during step 38 because how am I supposed to understand what’s happening there?! </h3>
+		45 minutes or so of pre-folding. And once again during step 38 because how am I supposed to understand what’s happening there?! </h3><br>
        <hr>
       <h3><center>Resume available upon request</h3>
         <br><br>
