--- a/projects/index.html
+++ b/projects/index.html
@@ -29,19 +29,17 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-	      <h1>Projects</h1>
-  <hr>
-          <div class="adventurecell">
-            <a href="adventure"><h3><center>Adventure</h3></div>
-    <div class="cookingcell">
-      <a href="cooking"><h3><center>Cooking</h3></div>
-    <div class="artcell">
-      <a href="art"><h3><center>Art
-    <h3></div>
-<div class="technicalcell">
-        <a href="technical"><h3><center>Technical
-          </h3></div>
-<br><hr><br><h1>Origami Koi</h1>
+	      <h1>Projects</h1><hr>
+        <div class="adventurecell">
+          <a href="adventure"><h3><center>Adventure</h3></a></div>
+        <div class="artcell">
+           <a href="art"><h3><center>Art</h3></a></div>
+        <div class="cookingcell">
+            <a href="cooking"><h3><center>Cooking</h3></a></div>
+	<div class="technicalcell">
+            <a href="technical"><h3><center>Technical</h3></a></div>
+         <br><hr><br>
+         <h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
 		I stumbled upon an origami book by Won Park which contained an incredibly realistic dollar bill Koi fish. </h3>
