--- a/projects/adventure.html
+++ b/projects/adventure.html
@@ -17,7 +17,7 @@
       <ul>
         <li class="contact"><a href="../contact">Contact</a></li>
         <li class="about"><a href="../about">About</a></li>
-        <li class="projects"><a class="../active" href="projects">Projects</a></li>
+        <li class="projects"><a class="active" href="../projects">Projects</a></li>
         <li class="skills"><a  href="../skills">Skills</a></li>
         <li class="home"><a href="../">Home</a></li> 
         <li class="icon"><a href="javascript:void(0);" onclick="collapseFunction()">
@@ -31,9 +31,6 @@
       <div class="content">
         <h1>Adventure</h1>
 		<h3>I will post links to various adventures here. Including trail reports for hiking, climing, and camping.</h3>
-       <hr>
-      <h3><center>Resume available upon request</h3>
-        <br><br>
         </div>
     </div>
   </section>
