--- a/projects/technical.html
+++ b/projects/technical.html
@@ -29,7 +29,7 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>Technical</h1>
+        <h1>Technical</h1><hr>
 	<h3> I'll post technical projects here including arduino, coding, or anything that takes a bit of technical know how.</h3>
         </div>
     </div>
