--- a/projects/cooking.html
+++ b/projects/cooking.html
@@ -29,7 +29,7 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>Cooking</h1>
+        <h1>Cooking</h1><hr>
 		<h3>I will upload different cooking projects here with a link to the recipe ect.</h3>
         </div>
     </div>
