--- a/projects/art.html
+++ b/projects/art.html
@@ -29,7 +29,7 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>ART</h1>
+        <h1>ART</h1><hr>
 		<h3>I dont see myself posting too many art projects, but when i do post the odd one, i will add it here.</h3>
         </div>
     </div>
