--- a/projects/adventure.html
+++ b/projects/adventure.html
@@ -29,7 +29,7 @@
   <section class="container">
 	<div class="inner">
       <div class="content">
-        <h1>Adventure</h1>
+        <h1>Adventure</h1><hr>
 		<h3>I will post links to various adventures here. Including trail reports for hiking, climing, and camping.</h3>
         </div>
     </div>
