--- a/projects/index.html
+++ b/projects/index.html
@@ -38,7 +38,7 @@
             <a href="cooking"><h3><center>Cooking</h3></a></div>
 	<div class="technicalcell">
             <a href="technical"><h3><center>Technical</h3></a></div>
-         <br><hr><br>
+         <br><hr><h1>Recent Project</h1><hr>
          <h1>Origami Koi</h1>
 		<a href="/images/Koi.JPG"><img style="float:right; margin: 0px 0px 15px 25px;" src="/images/Koi.JPG" alt="Origami Koi" width="160" height="160"></a>
 		<h3> Is it a skill? I’m not sure. It was actually really close to being a huge waste of time. While exploring Michaels,  
