--- a/contact.html
+++ b/contact.html
@@ -41,31 +41,32 @@
         <fieldset>
         <ul>
           <li>
-            <p class="left">
+            <h3>
               <label for="first_name">First name *</label>
               <input name="name" type="text" id="name"/>
-            </p>
-            <p class="pull-right">
+            </h3>
+            <h3>
               <label for="last_name">Last name</label>
               <input name="last_name" type="text" id="last_name"/>      
-            </p>
+            </h3>
           </li>
-
           <li>
-            <p>
+            <h3>
               <label for="email">Email * </label>
               <input name="email" type="text" id="email"/>
-            </p>
+            </h3>
           </li>        
           <li>
-            <label for="comments"><h3>Comments *</h3></label>
+            <h3>
+            <label for="comments">Comments *</label>
             <textarea cols="46" rows="8" name="comments" id="comments"></textarea>
+            </h3>
           </li>
               <!-- The following field is for robots only, invisible to humans: -->
                <p class="robotic" id="pot">
                 <label>If you're human leave this blank:</label>
                 <input name="robotest" type="text" id="robotest" class="robotest" />
-            </p>
+            </p><br>
           <li>
             <input class="btn submit" value="Send Message" class="Submit" />
           </li>
