--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="formcontainer">
       <div class="contactform">
       <div class="row body">
-      <form method="post" action="">
+      <form method="post" action="submit.php">
         <fieldset>
         <ul>
           <li>
