--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="formcontainer">
       <div class="contactform">
       <div class="row body">
-      <form method="post" action="submit.php">
+      <form name="contactform" method="post" action="submit.php">
         <fieldset>
         <ul>
           <li>
@@ -68,7 +68,7 @@
                 <input name="robotest" type="text" id="robotest" class="robotest" />
             </p><br>
           <li>
-            <input class="btn submit" value="Send Message" class="Submit" />
+            <input type="submit" class="btn submit" value="Submit"/>
           </li>
         </ul>
         </fieldset>
