--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                 <input name="robotest" type="text" id="robotest" class="robotest" />
             </p><br>
           <li>
-            <input type="submit" class="btn submit" value="Submit"/>
+            <input type="submit" value="Send Message" class="btn submit"/>
           </li>
         </ul>
         </fieldset>
