--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="formcontainer">
       <div class="contactform">
       <div class="row body">
-      <form name="contactform" method="post" action="sendmessage.php">
+      <form name="contactform" method="get" action="sendmessage.php">
         <fieldset>
             <h3>
               <label>Your name *</label>
