--- a/projects/art/index.html
+++ b/projects/art/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Projects">
   <meta name="author" content="Joel Butler">
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
   
@@ -15,11 +15,11 @@
   <header>
    <nav class="navigation">
       <ul>
-        <li class="contact"><a href="../contact">Contact</a></li>
-        <li class="about"><a href="../about">About</a></li>
-        <li class="projects"><a class="active" href="../projects">Projects</a></li>
-        <li class="skills"><a  href="../skills">Skills</a></li>
-        <li class="home"><a href="../">Home</a></li> 
+        <li class="contact"><a href="../../contact">Contact</a></li>
+        <li class="about"><a href="../../about">About</a></li>
+        <li class="projects"><a class="active" href="../../projects">Projects</a></li>
+        <li class="skills"><a  href="../../skills">Skills</a></li>
+        <li class="home"><a href="../../">Home</a></li> 
         <li class="icon"><a href="javascript:void(0);" onclick="collapseFunction()">
             <i class="fa fa-server fa-lg"></i></a><li>
       </ul>
