--- a/projects/adventure/brunswick.html
+++ b/projects/adventure/brunswick.html
@@ -30,7 +30,10 @@
 	<div class="inner">
       <div class="content">
         <h1>Adventure</h1><hr>
-		<h3>I will post links to various adventures here. Including trail reports for hiking, climing, and camping.</h3>
+	<div class="brunswickcell">
+          <a href="brunswick"><h3><center>Mt.Brunswick</h3></a></div>
+         <br><hr><h1>Recent Project</h1><hr>
+         <h1>Origami Koi</h1>
         </div>
     </div>
   </section>
