--- a/projects/index.html
+++ b/projects/index.html
@@ -30,13 +30,13 @@
 	<div class="inner">
       <div class="content">
 	      <h1>Projects</h1><hr>
-        <div class="adventurecell">
+        <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/adventure.jpg)">
           <a href="adventure"><h3><center>Adventure</h3></a></div>
-        <div class="artcell">
+        <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/chameleon.jpg)">
            <a href="art"><h3><center>Art</h3></a></div>
-        <div class="cookingcell">
+        <div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/cooking.jpg)">
             <a href="cooking"><h3><center>Cooking</h3></a></div>
-	<div class="technicalcell">
+	<div class="projectcell" style="background-image: url(http://www.joel-butler.com/images/technical.JPG)">
             <a href="technical"><h3><center>Technical</h3></a></div>
          <br><hr><h1>Recent Project</h1><hr>
          <h1>Origami Koi</h1>
